--- a/fixtures/node_with_opa/manifest.yml
+++ b/fixtures/node_with_opa/manifest.yml
@@ -8,16 +8,18 @@ applications:
   memory: 128M
   instances: 1
   buildpacks:
-    - https://github.com/SAP/cloud-authorization-buildpack.git
+    - https://github.com/SAP/cloud-authorization-buildpack.git#dev
     - nodejs_buildpack
   services:
-    - ams
+    - ams-node-opa
+    - name: ias-node-opa
+      parameters: {"credential-type": "X509_GENERATED"}
   health-check-type: process
   env:
     AMS_DATA:  >
             {
               "root": "/",
-              "directories": ["cas/"],
+              "directories": ["ams/"],
               "ams_app_name": "ams_node_example"
             }
   no-route: true
